plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'edu.learning.microservices.core.review'
version = '1.0.0-SNAPSHOT'
description = 'Review Service Microservice'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext{
	// Define versions for dependencies if needed
	springBootVersion = '3.5.9'
	mapstructVersion = '1.6.3'
	lombokMapstructBindingVersion = '0.2.0'
	mySqlConnectorVersion = '9.5.0'
	r2dbcMySqlVersion = '1.4.1'
}

dependencyManagement {
	imports {
		mavenBom ("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
	}
}


dependencies {
	// Library modules
	// API module
	implementation(project(':api')) {
		exclude group: 'org.springframework.boot', module: 'spring-boot-autoconfigure'
		exclude group: 'org.springframework.boot', module: 'spring-boot-jackson'
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-json'
	}

	// Util module
	implementation(project(':util')) {
		exclude group: 'org.springframework.boot', module: 'spring-boot-autoconfigure'
		exclude group: 'org.springframework.boot', module: 'spring-boot-jackson'
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-json'
	}

	// MySql dependencies
//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	testRuntimeOnly ("com.mysql:mysql-connector-j:${mySqlConnectorVersion}")

	// Reactive MySql dependencies
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation ("io.asyncer:r2dbc-mysql:${r2dbcMySqlVersion}")

	// Spring Boot dependencies
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// MapStruct dependencies
	implementation("org.mapstruct:mapstruct:${mapstructVersion}")
	compileOnly ("org.mapstruct:mapstruct-processor:${mapstructVersion}")
	annotationProcessor ("org.mapstruct:mapstruct-processor:${mapstructVersion}")
	testAnnotationProcessor ("org.mapstruct:mapstruct-processor:${mapstructVersion}")
	annotationProcessor("org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}")

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation group: 'io.netty', name: 'netty-resolver-dns-native-macos', classifier: 'osx-aarch_64'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:mysql'
	testImplementation 'org.testcontainers:r2dbc'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}